--- a/5137_CODE_2024/.pathplanner/settings.json
+++ b/5137_CODE_2024/.pathplanner/settings.json
@@ -3,7 +3,7 @@
   "robotLength": 0.8255,
   "holonomicMode": true,
   "pathFolders": [
-    "New Folder",
+    "sus autos",
     "New New Folder"
   ],
   "autoFolders": [],
