--- a/5137_CODE_2024/.pathplanner/settings.json
+++ b/5137_CODE_2024/.pathplanner/settings.json
@@ -3,10 +3,15 @@
   "robotLength": 0.8255,
   "holonomicMode": true,
   "pathFolders": [
-    "sus autos",
-    "New New Folder"
+    "Low",
+    "Middle",
+    "High"
   ],
-  "autoFolders": [],
+  "autoFolders": [
+    "Low",
+    "Middle",
+    "High"
+  ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 540.0,
