--- a/5137_CODE_2024/build.gradle
+++ b/5137_CODE_2024/build.gradle
@@ -33,7 +33,7 @@ deploy {
                     jvmArgs.add("-Dcom.sun.management.jmxremote.local.only=false")
                     jvmArgs.add("-Dcom.sun.management.jmxremote.ssl=false")
                     jvmArgs.add("-Dcom.sun.management.jmxremote.authenticate=false")
-                    jvmArgs.add("-Djava.rmi.server.hostname=10.XX.XX.2") // Replace XX.XX with team number
+                    jvmArgs.add("-Djava.rmi.server.hostname=10.51.37.2") // Replace XX.XX with team number
                 }
 
                 // Static files artifact
