--- a/5137_CODE_2024/.pathplanner/settings.json
+++ b/5137_CODE_2024/.pathplanner/settings.json
@@ -8,9 +8,10 @@
     "High"
   ],
   "autoFolders": [
+    "High",
     "Low",
     "Middle",
-    "High"
+    "Test"
   ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
